@@ -1,3 +1,9 @@
+2007-08-27  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXDialog.c (Tk_ChooseColorObjCmd): correct setting of
+	interp result [Bug 1782105]; fix -initialcolor overwriting last color
+	selection; style cleanup.
+
 2007-08-07  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/Makefile.in:	add support for compile flags specific to
